@@ -1,59 +1,43 @@
-package uk.gov.hmcts.reform.fpl.service;
+package uk.gov.hmcts.reform.fpl.service.email.content;
 
-import com.fasterxml.jackson.databind.ObjectMapper;
-import com.google.common.collect.ImmutableList;
 import com.google.common.collect.ImmutableMap;
-import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.autoconfigure.jackson.JacksonAutoConfiguration;
-import org.springframework.boot.test.mock.mockito.MockBean;
 import org.springframework.test.context.ContextConfiguration;
 import org.springframework.test.context.junit.jupiter.SpringExtension;
-import uk.gov.hmcts.reform.fpl.config.LocalAuthorityNameLookupConfiguration;
-import uk.gov.hmcts.reform.fpl.service.email.content.GatekeeperEmailContentProvider;
+import org.springframework.test.util.ReflectionTestUtils;
+import uk.gov.hmcts.reform.fpl.service.config.LookupTestConfig;
 
 import java.util.List;
 import java.util.Map;
+import javax.annotation.PostConstruct;
 
 import static org.assertj.core.api.Assertions.assertThat;
-import static org.mockito.BDDMockito.given;
-import static uk.gov.hmcts.reform.fpl.CaseDefinitionConstants.CASE_TYPE;
-import static uk.gov.hmcts.reform.fpl.CaseDefinitionConstants.JURISDICTION;
 import static uk.gov.hmcts.reform.fpl.utils.CoreCaseDataStoreLoader.emptyCaseDetails;
 import static uk.gov.hmcts.reform.fpl.utils.CoreCaseDataStoreLoader.populatedCaseDetails;
 
 @ExtendWith(SpringExtension.class)
-@ContextConfiguration(classes = {JacksonAutoConfiguration.class, GatekeeperEmailContentProvider.class,
-    HearingBookingService.class})
-class GatekeeperEmailContentProviderTest {
-
-    private static final String LOCAL_AUTHORITY_CODE = "example";
-
-    @MockBean
-    private LocalAuthorityNameLookupConfiguration localAuthorityNameLookupConfiguration;
+@ContextConfiguration(classes = {
+    JacksonAutoConfiguration.class, GatekeeperEmailContentProvider.class, LookupTestConfig.class
+})
+class GatekeeperEmailContentProviderTest extends AbstractEmailContentProviderTest {
 
     @Autowired
-    private ObjectMapper mapper;
-
-    @Autowired
-    private HearingBookingService hearingBookingService;
-
     private GatekeeperEmailContentProvider gatekeeperEmailContentProvider;
 
-    @BeforeEach
-    void setup() {
-        this.gatekeeperEmailContentProvider = new GatekeeperEmailContentProvider(localAuthorityNameLookupConfiguration,
-            "null", hearingBookingService, mapper);
+    @PostConstruct
+    void setField() {
+        ReflectionTestUtils.setField(gatekeeperEmailContentProvider, "uiBaseUrl", BASE_URL);
     }
 
     @Test
     void shouldReturnExpectedMapWithValidCaseDetails() {
-        List<String> ordersAndDirections = ImmutableList.of("Emergency protection order",
-            "Contact with any named person");
+        List<String> ordersAndDirections = List.of("Emergency protection order", "Contact with any named person");
+
         Map<String, Object> expectedMap = ImmutableMap.<String, Object>builder()
-            .put("localAuthority", "Example Local Authority")
+            .put("localAuthority", LOCAL_AUTHORITY_NAME)
             .put("dataPresent", "Yes")
             .put("fullStop", "No")
             .put("ordersAndDirections", ordersAndDirections)
@@ -62,12 +46,9 @@ class GatekeeperEmailContentProviderTest {
             .put("urgentHearing", "Yes")
             .put("nonUrgentHearing", "No")
             .put("firstRespondentName", "Smith")
-            .put("reference", "12345")
-            .put("caseUrl", "null/case/" + JURISDICTION + "/" + CASE_TYPE + "/12345")
+            .put("reference", CASE_REFERENCE)
+            .put("caseUrl", buildCaseUrl(CASE_REFERENCE))
             .build();
-
-        given(localAuthorityNameLookupConfiguration.getLocalAuthorityName(LOCAL_AUTHORITY_CODE))
-            .willReturn("Example Local Authority");
 
         assertThat(gatekeeperEmailContentProvider.buildGatekeeperNotification(populatedCaseDetails(),
             LOCAL_AUTHORITY_CODE)).isEqualTo(expectedMap);
@@ -76,7 +57,7 @@ class GatekeeperEmailContentProviderTest {
     @Test
     void shouldReturnSuccessfullyWithEmptyCaseDetails() {
         Map<String, Object> expectedMap = ImmutableMap.<String, Object>builder()
-            .put("localAuthority", "Example Local Authority")
+            .put("localAuthority", LOCAL_AUTHORITY_NAME)
             .put("dataPresent", "No")
             .put("fullStop", "Yes")
             .put("ordersAndDirections", "")
@@ -86,11 +67,8 @@ class GatekeeperEmailContentProviderTest {
             .put("nonUrgentHearing", "No")
             .put("firstRespondentName", "")
             .put("reference", "123")
-            .put("caseUrl", "null/case/" + JURISDICTION + "/" + CASE_TYPE + "/123")
+            .put("caseUrl", buildCaseUrl("123"))
             .build();
-
-        given(localAuthorityNameLookupConfiguration.getLocalAuthorityName(LOCAL_AUTHORITY_CODE))
-            .willReturn("Example Local Authority");
 
         assertThat(gatekeeperEmailContentProvider.buildGatekeeperNotification(emptyCaseDetails(),
             LOCAL_AUTHORITY_CODE)).isEqualTo(expectedMap);
